{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 176,
  "lineage": "f22a766e-e74a-4203-948c-0b00f204d31c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "ssm_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:security-group/sg-0f33723b7f2236898",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f33723b7f2236898",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "599143665040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-076daf005ff82ef27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ssm_test_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01154243795368525",
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:instance/i-02a180085c8d25681",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2role_allow_ssm",
            "id": "i-02a180085c8d25681",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03c944cbcc0302748",
            "private_dns": "ip-10-0-0-128.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0357518714280fbd0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc88f43b062e124b",
            "tags": {
              "Name": "ssm_test"
            },
            "tags_all": {
              "Name": "ssm_test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006f8ab23824756ba"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2role_allow_ssm",
            "aws_iam_role.ec2role_allow_ssm",
            "aws_security_group.allow_https_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.ssm_test",
            "data.aws_ami.AmazonLinux2",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:security-group/sg-006f8ab23824756ba",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-006f8ab23824756ba",
            "ingress": [],
            "name": "allow_https_egress",
            "name_prefix": "",
            "owner_id": "599143665040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076daf005ff82ef27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:security-group/sg-0e66aa23944806079",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e66aa23944806079",
            "ingress": [],
            "name": "allow_https_ingress",
            "name_prefix": "",
            "owner_id": "599143665040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076daf005ff82ef27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1432793057",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006f8ab23824756ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_https_egress",
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3804096100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e66aa23944806079",
            "self": false,
            "source_security_group_id": "sg-006f8ab23824756ba",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_https_egress",
            "aws_security_group.allow_https_ingress",
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:subnet/subnet-0bc88f43b062e124b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc88f43b062e124b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599143665040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-076daf005ff82ef27"
          },
          "dependencies": [
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ssm_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:vpc/vpc-076daf005ff82ef27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074da7b1218b2d7dc",
            "default_route_table_id": "rtb-0c49540e3398b01fc",
            "default_security_group_id": "sg-0f33723b7f2236898",
            "dhcp_options_id": "dopt-f1cef396",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-076daf005ff82ef27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c49540e3398b01fc",
            "owner_id": "599143665040",
            "tags": {
              "Name": "ssm_test"
            },
            "tags_all": {
              "Name": "ssm_test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2message_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:vpc-endpoint/vpce-051784b8ced746083",
            "dns_entry": [
              {
                "dns_name": "vpce-051784b8ced746083-2c1jvarp.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-051784b8ced746083-2c1jvarp-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0854368378ZCE3YRF3G8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-051784b8ced746083",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bf841f92c01b81c8"
            ],
            "owner_id": "599143665040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e66aa23944806079"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0bc88f43b062e124b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-076daf005ff82ef27"
          },
          "dependencies": [
            "aws_security_group.allow_https_ingress",
            "aws_subnet.private_subnet",
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:vpc-endpoint/vpce-036e0e254f39b1f48",
            "dns_entry": [
              {
                "dns_name": "vpce-036e0e254f39b1f48-lhzhpo9v.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-036e0e254f39b1f48-lhzhpo9v-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z102753618A0NX8B1TVTV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-036e0e254f39b1f48",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-065908263b31270e5"
            ],
            "owner_id": "599143665040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e66aa23944806079"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0bc88f43b062e124b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-076daf005ff82ef27"
          },
          "dependencies": [
            "aws_security_group.allow_https_ingress",
            "aws_subnet.private_subnet",
            "aws_vpc.ssm_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessage_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:599143665040:vpc-endpoint/vpce-00ece9593d60834c6",
            "dns_entry": [
              {
                "dns_name": "vpce-00ece9593d60834c6-960ercjr.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00ece9593d60834c6-960ercjr-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z10270092MLAX2JSAKB0C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-00ece9593d60834c6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-080bd9b6cc843100b"
            ],
            "owner_id": "599143665040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e66aa23944806079"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0bc88f43b062e124b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-076daf005ff82ef27"
          },
          "dependencies": [
            "aws_security_group.allow_https_ingress",
            "aws_subnet.private_subnet",
            "aws_vpc.ssm_test"
          ]
        }
      ]
    }
  ]
}